--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.2",
+        "nicolaslopezj/searchable": "^1.13",
         "spatie/laravel-newsletter": "^4.8",
-        "stripe/stripe-php": "^7.69"
+        "stripe/stripe-php": "^7.69",
+        "tcg/voyager": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
@@ -38,6 +40,10 @@
         }
     },
     "autoload": {
+        "classmap": [
+            "database/seeders",
+            "database/factories"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
