--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.21.1",
+        "bootstrap-sass": "^3.4.1",
         "cross-env": "^7.0",
+        "jquery": "^3.4.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "reset-css": "^2.2.1",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.21.0",
+        "sass-loader": "7.*",
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^1.2.0",
+        "sanitize-html": "^1.18.2"
     }
 }
